@startuml
skinparam classAttributeIconSize 0
class Loan {
  +id: UUID
  +creditor_id: UUID
  +borrower_id: UUID
  +status: string
  +current_terms_version: int
  +current_schedule_version: int
}
class LoanTermsVersion {
  +version: int
  +principal_amount: decimal
  +currency: string
  +repayment_frequency: string
  +maturity_date: date?
}
class ScheduleVersion {
  +version: int
  +effective_at: datetime
}
class ScheduleInstallment {
  +sequence: int
  +due_date: date
  +amount_due: decimal
  +status: string
}
class LoanChangeRequest {
  +id: UUID
  +type: TERM_CHANGE
  +status: PENDING|APPROVED|REJECTED
}
Loan "1" -- "*" LoanTermsVersion
Loan "1" -- "*" ScheduleVersion
ScheduleVersion "1" -- "*" ScheduleInstallment
Loan "1" -- "*" LoanChangeRequest
@enduml
